DIO Connection Service implementation

--- a/kura/distrib/config/kura.build.properties
+++ b/kura/distrib/config/kura.build.properties
@@ -3,7 +3,7 @@ org.eclipse.kura.api.version=1.1.0-SNAPSHOT
 org.eclipse.kura.test.version=1.0.1-SNAPSHOT
 org.eclipse.kura.core.version=1.0.1-SNAPSHOT
 org.eclipse.kura.core.cloud.version=1.0.1-SNAPSHOT
-org.eclipse.kura.core.comm.version=1.0.1-SNAPSHOT
+org.eclipse.kura.core.comm.version=1.1.0-SNAPSHOT
 org.eclipse.kura.core.configuration.version=1.0.1-SNAPSHOT
 org.eclipse.kura.core.crypto.version=1.0.1-SNAPSHOT
 org.eclipse.kura.deployment.agent.version=1.0.1-SNAPSHOT
@@ -30,3 +30,4 @@ org.eclipse.kura.example.project.version=1.0.1-SNAPSHOT
 org.eclipse.kura.example.publisher.version=1.0.1-SNAPSHOT
 org.eclipse.kura.example.serial.publisher.version=1.0.1-SNAPSHOT
 org.eclipse.kura.web.version=1.0.1-SNAPSHOT
+org.eclipse.kura.core.comm.dio.version=1.0.0-SNAPSHOT
