--- a/kura/org.eclipse.kura.core.comm.dio/pom.xml
+++ b/kura/org.eclipse.kura.core.comm.dio/pom.xml
@@ -23,8 +23,8 @@
 		<relativePath>../manifest_pom.xml</relativePath>
 	</parent>
 
-	<artifactId>org.eclipse.kura.core.comm</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<artifactId>org.eclipse.kura.core.comm.dio</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 
 	<properties>
