--- a/kura/distrib/pom.xml
+++ b/kura/distrib/pom.xml
@@ -393,6 +393,92 @@
 	</dependencies>
 
 	<profiles>
+	
+	<profile>
+            <id>intel-galileo-2-nn</id>
+			<properties>
+				<kura.edison.install.dir>/home/root/eclipse</kura.edison.install.dir>
+			</properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
+                <plugins>
+                    <plugin>
+						<groupId>org.codehaus.mojo</groupId> 
+						<artifactId>properties-maven-plugin</artifactId> 
+						<version>1.0-alpha-1</version> 
+						<executions>
+							<execution>
+								<phase>initialize</phase>
+								<goals>
+									<goal>read-project-properties</goal> 
+								</goals>
+								<configuration>
+									<files>
+										<file>${basedir}/build.properties</file> 
+										<file>${basedir}/config/kura.build.properties</file> 
+									</files>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>buildnumber-maven-plugin</artifactId>
+                        <version>1.0</version>
+                        <executions>
+                            <execution>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>create-timestamp</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <id>intel-galileo-2-jars</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <target>
+                                        <property name="buildNumber" value="buildNumber" />
+                                        <property name="project.version" value="${project.version}" />
+                                        <property name="project.build.profile" value="${project.build.profile}" />
+                                        <property name="project.build.directory" value="${project.build.directory}" />
+                                        <property name="target.device" value="intel-galileo" />
+                                        <property name="kura.os.version" value="3.8.7-yocto-standard" />                                        
+                                        <property name="build.name" value="intel-galileo-2-nn" />
+                                        <property name="kura.arch" value="x86" />
+                                        <property name="kura.mem.size" value="256m" />
+                                        <property name="kura.install.dir" value="${kura.edison.install.dir}" />
+										<property name="http.port" value="8080" />
+                                        <ant antfile="${basedir}/src/main/ant/build_equinox_distrib.xml"
+                                            target="dist-linux" />
+                                    </target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+		
+	
+	
 		<profile>
             <id>intel-edison-nn</id>
 			<properties>
